# SCU_Spinal_code

./: CMakeLists.txt
include/: RNG.h  encoder.h  source.h
src/: RNG.cpp  encoder.cpp  main.cpp  spookyhash.cpp
